<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Doomsday Trainer</string>
    <string name="app_title">Doomsday Trainer</string>
    <string name="guess_day">What day of the week is this date?</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="correct_guess">Correct! It\'s %s!</string>
    <string name="incorrect_guess">Sorry, that\'s not right. It\'s actually %s.</string>
    <string name="new_date">New Date</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="date_range_title">Date Range</string>
    <string name="start_year_label">Start Year:</string>
    <string name="end_year_label">End Year:</string>
    <string name="date_format_title">Date Format</string>
    <string name="format_mdy">Month Day, Year (Jan 1, 2023)</string>
    <string name="format_dmy">DD.MM.YYYY (01.01.2023)</string>
    <string name="format_ymd">YYYY–MM–DD (2023–01–01)</string>
    <string name="format_long">Long Format (January 1, 2023)</string>
    <string name="save_settings">Save Settings</string>
    <string name="invalid_year_range">End year must be greater than start year</string>
    <string name="series_mode_title">Series Mode</string>
    <string name="series_count_label">Number of dates per series:</string>
    <string name="invalid_series_count">Please enter a valid number (1–100)</string>
    <string name="start_series">Start Series</string>
    <string name="series_progress">%1$d of %2$d</string>
    <string name="series_results_title">Series Results</string>
    <string name="series_time_total">Total time: %s</string>
    <string name="series_time_average">Average time per date: %s</string>
    <string name="series_accuracy">Accuracy: %1$d/%2$d (%3$.1f%%)</string>
    <string name="series_finish">Finish</string>
    <string name="default_date_display">January 1, 2023</string>
    <string name="start_year_hint">1900</string>
    <string name="end_year_hint">2099</string>
    <string name="series_count_hint">10</string>
    <string name="date_with_progress">%1$s\n%2$s</string>
</resources>
